; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd.c_cmd_list_new.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd.c_cmd_list_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_list = type { i32, i32, i64 }

@cmd_list_next_group = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cmd_list* @cmd_list_new() #0 {
  %1 = alloca %struct.cmd_list*, align 8
  %2 = call %struct.cmd_list* @xcalloc(i32 1, i32 16)
  store %struct.cmd_list* %2, %struct.cmd_list** %1, align 8
  %3 = load %struct.cmd_list*, %struct.cmd_list** %1, align 8
  %4 = getelementptr inbounds %struct.cmd_list, %struct.cmd_list* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = load i32, i32* @cmd_list_next_group, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @cmd_list_next_group, align 4
  %7 = sext i32 %5 to i64
  %8 = load %struct.cmd_list*, %struct.cmd_list** %1, align 8
  %9 = getelementptr inbounds %struct.cmd_list, %struct.cmd_list* %8, i32 0, i32 2
  store i64 %7, i64* %9, align 8
  %10 = load %struct.cmd_list*, %struct.cmd_list** %1, align 8
  %11 = getelementptr inbounds %struct.cmd_list, %struct.cmd_list* %10, i32 0, i32 1
  %12 = call i32 @TAILQ_INIT(i32* %11)
  %13 = load %struct.cmd_list*, %struct.cmd_list** %1, align 8
  ret %struct.cmd_list* %13
}

declare dso_local %struct.cmd_list* @xcalloc(i32, i32) #1

declare dso_local i32 @TAILQ_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
